add shaders in files
all my homies keep their shaders separate

--- a/BlueberryBee.vcxproj.filters
+++ b/BlueberryBee.vcxproj.filters
@@ -37,5 +37,8 @@
     <None Include="shaders\vert.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\frag.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
