--- a/BlueberryBee.vcxproj
+++ b/BlueberryBee.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="include\GLFWGraphicsProgram.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\frag.glsl" />
     <None Include="shaders\vert.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
