--- a/BlueberryBee.vcxproj.filters
+++ b/BlueberryBee.vcxproj.filters
@@ -62,15 +62,18 @@
     <ClInclude Include="include\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\AbstractCamera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\vert.glsl">
       <Filter>Shaders</Filter>
     </None>
     <None Include="shaders\frag.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\lightingFrag.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\lightingVert.glsl">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
