--- a/BlueberryBee.vcxproj.filters
+++ b/BlueberryBee.vcxproj.filters
@@ -64,16 +64,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\vert.glsl">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="shaders\frag.glsl">
+    <None Include="shaders\lightingVert.glsl">
       <Filter>Shaders</Filter>
     </None>
     <None Include="shaders\lightingFrag.glsl">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="shaders\lightingVert.glsl">
+    <None Include="shaders\lampFrag.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\lampVert.glsl">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
