--- a/BlueberryBee.vcxproj
+++ b/BlueberryBee.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Cube.cpp" />
     <ClCompile Include="src\GLFWGraphicsProgram.cpp" />
+    <ClCompile Include="src\LightCaster.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Texture.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Cube.h" />
     <ClInclude Include="include\GLFWGraphicsProgram.h" />
+    <ClInclude Include="include\LightCaster.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\stb_image.h" />
     <ClInclude Include="include\Texture.h" />
@@ -154,6 +156,8 @@
   <ItemGroup>
     <None Include="shaders\basicTextureFrag.glsl" />
     <None Include="shaders\basicTextureVert.glsl" />
+    <None Include="shaders\DirectionalLightFrag.glsl" />
+    <None Include="shaders\DirectionalLightVert.glsl" />
     <None Include="shaders\lightingFrag.glsl" />
     <None Include="shaders\lampFrag.glsl" />
     <None Include="shaders\lampVert.glsl" />
