--- a/BlueberryBee.vcxproj
+++ b/BlueberryBee.vcxproj
@@ -164,6 +164,8 @@
     <None Include="shaders\lightingVert.glsl" />
     <None Include="shaders\materialFrag.glsl" />
     <None Include="shaders\materialVert.glsl" />
+    <None Include="shaders\pointLightFrag.glsl" />
+    <None Include="shaders\pointLightVert.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\container.jpg" />
