--- a/BlueberryBee.vcxproj.filters
+++ b/BlueberryBee.vcxproj.filters
@@ -112,6 +112,12 @@
     <None Include="shaders\pointLightFrag.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\spotLightFrag.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\spotLightVert.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\container.jpg">
