--- a/BlueberryBee.vcxproj
+++ b/BlueberryBee.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Plane.cpp" />
+    <ClCompile Include="src\PrimitiveObject.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\Transform.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\Model.h" />
     <ClInclude Include="include\Plane.h" />
+    <ClInclude Include="include\PrimitiveObject.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\stb_image.h" />
     <ClInclude Include="include\Texture.h" />
